--- a/documentation/documentation-frn.tex
+++ b/documentation/documentation-frn.tex
@@ -8,7 +8,7 @@
 \usepackage [svgnames]{xcolor}
 \usepackage[nowrite,infront,standard]{frontespizio}
 \nofiles 
-\fontoptionsans 
+\fontoptionnormal 
 \Istituzione {University of Pisa}
 \Divisione {Department of Computer Science}
 \Scuola {Master's Degree of Computer Science \\(Artificial Intelligence)}
@@ -16,10 +16,10 @@
 \Titoletto {Artificial Intelligence Fundamentals}
 \Titolo {\textcolor {black}{Football-betting Detection System}}
 \NCandidato {Project made by}
-\Rientro {3cm}
+\Rientro {2.5cm}
 \Candidato {Andrea Tufo}
 \NRelatore {Professor}{}
-\Relatore {M. Lo Monaco}
+\Relatore {Vincenzo Lomonaco}
 \begin {document}
 \preparefrontpagestandard
 \end {document}
