--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,titlepage,12pt]{report}
-\usepackage[sans]{frontespizio}
+\usepackage{frontespizio}
 \usepackage{geometry}
 \usepackage{lmodern}
 \usepackage[cache=false]{minted}
@@ -10,7 +10,7 @@
 \usepackage{subfig}
 \usepackage{graphicx}
 \definecolor{blu_pant}{RGB}{0, 64, 122}
-\geometry{bmargin=3.5cm, rmargin=2.5cm, lmargin=3.5cm, footnotesep=1cm}
+\geometry{bmargin=3.5cm, rmargin=2.5cm, lmargin=2.5cm, footnotesep=1cm}
 \usepackage{setspace}
 \setstretch{1.5}
 \makeindex[columns=1, title=Indice, intoc]
@@ -24,10 +24,10 @@
 \Titoletto{Artificial Intelligence Fundamentals}
 \Titolo{\textcolor{black}{Football-betting Detection System}}
 \NCandidato{Project made by}
-\Rientro{3cm}
+\Rientro{2.5cm}
 \Candidato{Andrea Tufo}
 \NRelatore{Professor}{}
-\Relatore{M. Lo Monaco}
+\Relatore{Vincenzo Lomonaco}
 \end{frontespizio}
 
 
@@ -43,8 +43,8 @@
 \chapter{
 Introduction\index{Introduction}}
 In this document all the specifications of the project can be found, including not only theorical explainations, but also instances, useful to enucleate the code written entirely in python.\\
-The first chapter is going to introduce the project in order to recount what kind of idea is underneath this project, how should be work, and why would be usefull for the world of football and more in general for the world of sport.\\
-In the end of this document there will be listed some difficulties that I faced during the development and also some issues that my algorithm has and some possible solutions for them.
+The first chapter is going to introduce how the projects actually works, and why it would be useful for football and more in general for sport.This section is also important to figure out the idea behind the algorithm and how all the development has been organized.\\
+All the mainly difficulties that I faced during the development and all the most important issues that my algorithm has, are listed in the end of this document, where are explained some possible solutions too, in order to solve them and improve the algorithm.
 
 
 \end{document}
