add sport-betting section

--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,titlepage,12pt]{report}
+\documentclass[a4paper,titlepage,11pt]{report}
 \usepackage{frontespizio}
 \usepackage{geometry}
 \usepackage{lmodern}
@@ -42,9 +42,14 @@
 
 \chapter{
 Introduction\index{Introduction}}
-In this document all the specifications of the project can be found, including not only theorical explainations, but also instances, useful to enucleate the code written entirely in python.\\
+In this document all the specifications of the project can be found, including not only theorical explainations, but also instances, useful to enucleate the code.\\
 The first chapter is going to introduce how the projects actually works, and why it would be useful for football and more in general for sport.This section is also important to figure out the idea behind the algorithm and how all the development has been organized.\\
-All the mainly difficulties that I faced during the development and all the most important issues that my algorithm has, are listed in the end of this document, where are explained some possible solutions too, in order to solve them and improve the algorithm.
+All the main difficulties that I faced during the development and all the most important issues that my algorithm has, are listed in the end of this document, where are explained some possible solutions too, in order to solve them and improve the algorithm.
 
+\section{
+Sport-betting}
+The Sport-betting phenomenon is also nowadays one of the worst side of the sports. It involves for the most part two sports: tennis and football. The former because since there are very few actors involved in the game (for example only two players) it's very easy bribing one of them or both of them and change the flow of events.\\
+The latter because football moves a huge amount of money, thus it's very easy to became milionaire corrupting the system.\\
+The \textit{modus operandi} is always the same, "bribe and earn", so this "sport criminal" used to establish new agreements with players, who have the role to make the match ends with a prefixed result, then criminals will be able to bet and so collect thier money.
 
 \end{document}
