add modus operandi section to doc

--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -12,7 +12,7 @@
 \definecolor{blu_pant}{RGB}{0, 64, 122}
 \geometry{bmargin=3.5cm, rmargin=2.5cm, lmargin=2.5cm, footnotesep=1cm}
 \usepackage{setspace}
-\setstretch{1.5}
+\setstretch{1.3}
 \makeindex[columns=1, title=Indice, intoc]
 \begin{document}
 {\fontfamily{lmr}\selectfont
@@ -43,13 +43,18 @@
 \chapter{
 Introduction\index{Introduction}}
 In this document all the specifications of the project can be found, including not only theorical explainations, but also instances, useful to enucleate the code.\\
-The first chapter is going to introduce how the projects actually works, and why it would be useful for football and more in general for sport.This section is also important to figure out the idea behind the algorithm and how all the development has been organized.\\
+The first chapter is going to introduce how the projects actually works, and why it would be useful for football and more in general for sport. This section is also important to figure out the idea behind the algorithm and how all the development has been organized.\\
 All the main difficulties that I faced during the development and all the most important issues that my algorithm has, are listed in the end of this document, where are explained some possible solutions too, in order to solve them and improve the algorithm.
 
 \section{
 Sport-betting}
-The Sport-betting phenomenon is also nowadays one of the worst side of the sports. It involves for the most part two sports: tennis and football. The former because since there are very few actors involved in the game (for example only two players) it's very easy bribing one of them or both of them and change the flow of events.\\
-The latter because football moves a huge amount of money, thus it's very easy to became milionaire corrupting the system.\\
-The \textit{modus operandi} is always the same, "bribe and earn", so this "sport criminal" used to establish new agreements with players, who have the role to make the match ends with a prefixed result, then criminals will be able to bet and so collect thier money.
+The Sport-betting phenomenon is still nowadays one of the worse side of the sports. It hurts two sports above all: tennis and football. The former because, since there are very few actors involved in the game (for example only two players), it's very easy bribing one of them or both of them and change the flow of events.\\
+The latter because football moves a huge amount of money, thus it's very easy to became milionaire corrupting one or two match per season.\\
+The \textit{modus operandi} is always the same, "bribe and earn", so "sport criminals" used to corrupt players, who have the role to make the match ends as agreed, then criminals will be able to bet and so collect thier money.
 
+\section{
+Modus operandi}
+In order to choose the right way and so understand what kind of data my algorithm needs to work as expected, I stuidied how criminals operate, trying to find many information as possible on internet.\\
+Usually these lawbreakers rig a few matches per division in a season and, furthermore, also few teams are involved, maximum of three or four teams per division. For example in Serie A during the season 2011/2012, only two matches has been faked, for a total earning estimated between 300'000 and 500'000 euros, corrupting players who belong to only two teams. Accordingly, it's pretty difficult to detect anomalies observing all the season of a specific team, so it's important to highlight that especially in this case technology and human must work together to find the final result.\\
+Another important
 \end{document}
