--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -56,5 +56,5 @@ The \textit{modus operandi} is always the same, "bribe and earn", so "sport crim
 Modus operandi}
 In order to choose the right way and so understand what kind of data my algorithm needs to work as expected, I stuidied how criminals operate, trying to find many information as possible on internet.\\
 Usually these lawbreakers rig a few matches per division in a season and, furthermore, also few teams are involved, maximum of three or four teams per division. For example in Serie A during the season 2011/2012, only two matches has been faked, for a total earning estimated between 300'000 and 500'000 euros, corrupting players who belong to only two teams. Accordingly, it's pretty difficult to detect anomalies observing all the season of a specific team, so it's important to highlight that especially in this case technology and human must work together to find the final result.\\
-Another important
+finally another important 
 \end{document}
