--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -12,7 +12,7 @@
 \definecolor{blu_pant}{RGB}{0, 64, 122}
 \geometry{bmargin=3.5cm, rmargin=2.5cm, lmargin=2.5cm, footnotesep=1cm}
 \usepackage{setspace}
-\setstretch{1.3}
+\setstretch{1.5}
 \makeindex[columns=1, title=Indice, intoc]
 \begin{document}
 {\fontfamily{lmr}\selectfont
@@ -49,12 +49,15 @@ All the main difficulties that I faced during the development and all the most i
 \section{
 Sport-betting}
 The Sport-betting phenomenon is still nowadays one of the worse side of the sports. It hurts two sports above all: tennis and football. The former because, since there are very few actors involved in the game (for example only two players), it's very easy bribing one of them or both of them and change the flow of events.\\
-The latter because football moves a huge amount of money, thus it's very easy to became milionaire corrupting one or two match per season.\\
+The latter because football moves a huge amount of money, thus it's very easy to became millsionaire corrupting one or two match per season.\\
 The \textit{modus operandi} is always the same, "bribe and earn", so "sport criminals" used to corrupt players, who have the role to make the match ends as agreed, then criminals will be able to bet and so collect thier money.
 
 \section{
 Modus operandi}
 In order to choose the right way and so understand what kind of data my algorithm needs to work as expected, I stuidied how criminals operate, trying to find many information as possible on internet.\\
-Usually these lawbreakers rig a few matches per division in a season and, furthermore, also few teams are involved, maximum of three or four teams per division. For example in Serie A during the season 2011/2012, only two matches has been faked, for a total earning estimated between 300'000 and 500'000 euros, corrupting players who belong to only two teams. Accordingly, it's pretty difficult to detect anomalies observing all the season of a specific team, so it's important to highlight that especially in this case technology and human must work together to find the final result.\\
-finally another important 
+Usually these lawbreakers rig a few matches per division in a season and, furthermore, also few teams are involved, maximum of three or four teams per division. For example in Serie A during the season 2011/2012, only two matches has been faked, for a total earning estimated between 300'000 and 500'000 euros, corrupting players who belong to only two teams. Accordingly, it's pretty difficult to detect anomalies observing all the season of a specific team, so it's important to highlight that especially in this case technology and human must work together to reach the goal and get rid of false-positive.\\
+Finally it's very important to say that bets can be carry out in two different ways: using less money per bet but making more bets using more betting brands or using more money per bet and only a few bets. The former is the most used, because of the spread of the money, in order to make who executes bets untreceable.
+
+\chapter{
+Implementation\index{Implementation}}
 \end{document}
