add two section and final chapter

--- a/documentation/documentation-frn.tex
+++ b/documentation/documentation-frn.tex
@@ -20,6 +20,7 @@
 \Candidato {Andrea Tufo}
 \NRelatore {Professor}{}
 \Relatore {Vincenzo Lomonaco}
+\Relatore {Maria Simi}
 \begin {document}
 \preparefrontpagestandard
 \end {document}
