final chapter started

--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -85,7 +85,8 @@ Then I caluclated the cardinality of these three sets and after this I computed 
 
 \chapter{
 Final results and HMM application}
-
+The reason why I choose Hidden Model Markov as probability algorithm is due to how the dataset is made up. During the entire work I have never tought about what kind of algorithm I was going to use. I simply tried to elaborate datas thinking only on what can be usefull and what would not be used in the program. Finally when all the values, metrics and parametrics has been obtained from the files, I started to think on what algorithm I could use.\\
+I had two main parameters parameters per match: goal scored by the two team, the home and away team UGIs and the.
 
 
 \end{document}
